Adding targeted gst

--- a/Testing data loader for new inputs.ipynb
+++ b/Testing data loader for new inputs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,9 +22,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['C:\\\\Users\\\\lucas\\\\Anaconda3\\\\envs\\\\m_audio\\\\python36.zip',\n",
+       " 'C:\\\\Users\\\\lucas\\\\Anaconda3\\\\envs\\\\m_audio\\\\DLLs',\n",
+       " 'C:\\\\Users\\\\lucas\\\\Anaconda3\\\\envs\\\\m_audio\\\\lib',\n",
+       " 'C:\\\\Users\\\\lucas\\\\Anaconda3\\\\envs\\\\m_audio',\n",
+       " '',\n",
+       " 'C:\\\\Users\\\\lucas\\\\Anaconda3\\\\envs\\\\m_audio\\\\lib\\\\site-packages',\n",
+       " 'C:\\\\Users\\\\lucas\\\\Anaconda3\\\\envs\\\\m_audio\\\\lib\\\\site-packages\\\\win32',\n",
+       " 'C:\\\\Users\\\\lucas\\\\Anaconda3\\\\envs\\\\m_audio\\\\lib\\\\site-packages\\\\win32\\\\lib',\n",
+       " 'C:\\\\Users\\\\lucas\\\\Anaconda3\\\\envs\\\\m_audio\\\\lib\\\\site-packages\\\\Pythonwin',\n",
+       " 'C:\\\\Users\\\\lucas\\\\Anaconda3\\\\envs\\\\m_audio\\\\lib\\\\site-packages\\\\IPython\\\\extensions',\n",
+       " 'C:\\\\Users\\\\lucas\\\\.ipython']"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "sys.path"
    ]
@@ -38,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,9 +69,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['./data/LJSpeech/LJSpeech-1.1/wavs/LJ001-0001.wav',\n",
+       " './data/LJSpeech/LJSpeech-1.1/wavs/LJ001-0002.wav',\n",
+       " './data/LJSpeech/LJSpeech-1.1/wavs/LJ001-0003.wav',\n",
+       " './data/LJSpeech/LJSpeech-1.1/wavs/LJ001-0004.wav',\n",
+       " './data/LJSpeech/LJSpeech-1.1/wavs/LJ001-0005.wav',\n",
+       " './data/LJSpeech/LJSpeech-1.1/wavs/LJ001-0006.wav',\n",
+       " './data/LJSpeech/LJSpeech-1.1/wavs/LJ001-0007.wav',\n",
+       " './data/LJSpeech/LJSpeech-1.1/wavs/LJ001-0008.wav',\n",
+       " './data/LJSpeech/LJSpeech-1.1/wavs/LJ001-0009.wav',\n",
+       " './data/LJSpeech/LJSpeech-1.1/wavs/LJ001-0010.wav']"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Pegando o caminho a partir do diretório atual que nos leva a 10 exemplos de arquivos .wav\n",
     "\n",
@@ -60,9 +101,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(10, 10, 10)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Agora criando 10 exemplos de textos quaisquer\n",
     "\n",
@@ -104,9 +156,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>wav_file</th>\n",
+       "      <th>text</th>\n",
+       "      <th>speakers</th>\n",
+       "      <th>styles</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>./data/LJSpeech/LJSpeech-1.1/wavs/LJ001-0001.wav</td>\n",
+       "      <td>hi</td>\n",
+       "      <td>rosana</td>\n",
+       "      <td>neutral</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>./data/LJSpeech/LJSpeech-1.1/wavs/LJ001-0002.wav</td>\n",
+       "      <td>my name is lucas</td>\n",
+       "      <td>marco</td>\n",
+       "      <td>neutral</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>./data/LJSpeech/LJSpeech-1.1/wavs/LJ001-0003.wav</td>\n",
+       "      <td>and yours?</td>\n",
+       "      <td>rosana</td>\n",
+       "      <td>neutral</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>./data/LJSpeech/LJSpeech-1.1/wavs/LJ001-0004.wav</td>\n",
+       "      <td>my name is jessica</td>\n",
+       "      <td>marco</td>\n",
+       "      <td>neutral</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>./data/LJSpeech/LJSpeech-1.1/wavs/LJ001-0005.wav</td>\n",
+       "      <td>how are you doing?</td>\n",
+       "      <td>rosana</td>\n",
+       "      <td>happy</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                           wav_file                text  \\\n",
+       "0  ./data/LJSpeech/LJSpeech-1.1/wavs/LJ001-0001.wav                  hi   \n",
+       "1  ./data/LJSpeech/LJSpeech-1.1/wavs/LJ001-0002.wav    my name is lucas   \n",
+       "2  ./data/LJSpeech/LJSpeech-1.1/wavs/LJ001-0003.wav          and yours?   \n",
+       "3  ./data/LJSpeech/LJSpeech-1.1/wavs/LJ001-0004.wav  my name is jessica   \n",
+       "4  ./data/LJSpeech/LJSpeech-1.1/wavs/LJ001-0005.wav  how are you doing?   \n",
+       "\n",
+       "  speakers   styles  \n",
+       "0   rosana  neutral  \n",
+       "1    marco  neutral  \n",
+       "2   rosana  neutral  \n",
+       "3    marco  neutral  \n",
+       "4   rosana    happy  "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df = pd.DataFrame({'wav_file':wav_files, 'text': texts, 'speakers': speakers , 'styles': styles})\n",
     "df.head()"
@@ -114,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,9 +317,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " > Using CUDA:  True\n",
+      " > Number of GPUs:  1\n"
+     ]
+    }
+   ],
    "source": [
     "use_cuda, num_gpus = setup_torch_training_env(True, False)\n",
     "\n",
@@ -295,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,34 +464,124 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " > Setting up Audio Processor...\n",
+      " | > sample_rate:16000\n",
+      " | > num_mels:80\n",
+      " | > min_level_db:-100\n",
+      " | > frame_shift_ms:None\n",
+      " | > frame_length_ms:None\n",
+      " | > ref_level_db:20\n",
+      " | > fft_size:1024\n",
+      " | > power:1.5\n",
+      " | > preemphasis:0.0\n",
+      " | > griffin_lim_iters:60\n",
+      " | > signal_norm:False\n",
+      " | > symmetric_norm:True\n",
+      " | > mel_fmin:50.0\n",
+      " | > mel_fmax:7600.0\n",
+      " | > spec_gain:1.0\n",
+      " | > stft_pad_mode:reflect\n",
+      " | > max_norm:4.0\n",
+      " | > clip_norm:True\n",
+      " | > do_trim_silence:True\n",
+      " | > trim_db:60\n",
+      " | > do_sound_norm:False\n",
+      " | > stats_path:\n",
+      " | > hop_length:256\n",
+      " | > win_length:1024\n"
+     ]
+    }
+   ],
    "source": [
     "ap = AudioProcessor(**c.audio)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " | > Found 10 files in D:\\Mestrado\\Emotion Audio Synthesis (TTS)\\repo_final\\pt_etts\\experiments\\debug\n"
+     ]
+    }
+   ],
    "source": [
     "meta_data_train, meta_data_eval = load_meta_data(c.datasets)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[['hi',\n",
+       "  './data/LJSpeech/LJSpeech-1.1/wavs/LJ001-0001.wav',\n",
+       "  'rosana',\n",
+       "  'neutral'],\n",
+       " ['my name is lucas',\n",
+       "  './data/LJSpeech/LJSpeech-1.1/wavs/LJ001-0002.wav',\n",
+       "  'marco',\n",
+       "  'neutral'],\n",
+       " ['and yours?',\n",
+       "  './data/LJSpeech/LJSpeech-1.1/wavs/LJ001-0003.wav',\n",
+       "  'rosana',\n",
+       "  'neutral'],\n",
+       " ['my name is jessica',\n",
+       "  './data/LJSpeech/LJSpeech-1.1/wavs/LJ001-0004.wav',\n",
+       "  'marco',\n",
+       "  'neutral'],\n",
+       " ['how are you doing?',\n",
+       "  './data/LJSpeech/LJSpeech-1.1/wavs/LJ001-0005.wav',\n",
+       "  'rosana',\n",
+       "  'happy'],\n",
+       " ['fine and you?',\n",
+       "  './data/LJSpeech/LJSpeech-1.1/wavs/LJ001-0006.wav',\n",
+       "  'marco',\n",
+       "  'happy'],\n",
+       " ['the same',\n",
+       "  './data/LJSpeech/LJSpeech-1.1/wavs/LJ001-0007.wav',\n",
+       "  'rosana',\n",
+       "  'happy'],\n",
+       " ['wanna hangout some day?',\n",
+       "  './data/LJSpeech/LJSpeech-1.1/wavs/LJ001-0008.wav',\n",
+       "  'marco',\n",
+       "  'happy'],\n",
+       " ['yes of course',\n",
+       "  './data/LJSpeech/LJSpeech-1.1/wavs/LJ001-0009.wav',\n",
+       "  'rosana',\n",
+       "  'happy'],\n",
+       " ['ok, see ya',\n",
+       "  './data/LJSpeech/LJSpeech-1.1/wavs/LJ001-0010.wav',\n",
+       "  'marco',\n",
+       "  'happy']]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "meta_data_train"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,9 +597,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training with 2 speakers: marco, rosana\n",
+      "Training with 2 styles: happy, neutral\n",
+      " > Using model: Tacotron2\n"
+     ]
+    }
+   ],
    "source": [
     "restore_path = None # primeiro ele é none pra criar o json\n",
     "# restore_path = experiment_folder\n",
@@ -427,9 +676,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'happy': 0, 'neutral': 1}"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "style_mapping"
    ]
@@ -492,9 +752,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'happy': 0, 'neutral': 1}"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "style_mapping"
    ]
@@ -515,9 +786,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      " > DataLoader initialization\n",
+      " | > Use phonemes: False\n",
+      " | > Number of instances : 10\n",
+      " | > Max length sequence: 23\n",
+      " | > Min length sequence: 2\n",
+      " | > Avg length sequence: 13.1\n",
+      " | > Num. instances discarded by max-min (max=153, min=6) seq limits: 1\n",
+      " | > Batch group size: 128.\n"
+     ]
+    }
+   ],
    "source": [
     "epoch = 0\n",
     "data_loader = setup_loader(ap, model.decoder.r, is_val=False,\n",
@@ -526,7 +813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "scrolled": true
    },
@@ -546,6 +833,41 @@
     "    \n",
     "    break"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0., 0.],\n",
+       "        [0., 1.],\n",
+       "        [0., 0.],\n",
+       "        [0., 1.],\n",
+       "        [0., 0.],\n",
+       "        [0., 0.],\n",
+       "        [0., 1.],\n",
+       "        [0., 0.],\n",
+       "        [0., 0.]], device='cuda:0')"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "style_targets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
