--- a/Lucas - Testing new model outputs [with dense layer].ipynb
+++ b/Lucas - Testing new model outputs [with dense layer].ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -60,6 +60,7 @@
       " | > stats_path:\n",
       " | > hop_length:256\n",
       " | > win_length:1024\n",
+      "hi\n",
       " > Using model: Tacotron2\n"
      ]
     }
@@ -95,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -273,7 +274,7 @@
        ")"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -284,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +294,7 @@
        "Embedding(3, 512)"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -304,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -313,7 +314,7 @@
        "torch.Size([1, 3, 512])"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -326,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -346,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -355,7 +356,7 @@
        "torch.Size([2, 1, 2])"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -367,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -375,9 +376,9 @@
      "output_type": "stream",
      "text": [
       "Traceback (most recent call last):\n",
-      "  File \"TTS/bin/train_tts.py\", line 18, in <module>\n",
-      "    import torch\n",
-      "ModuleNotFoundError: No module named 'torch'\n"
+      "  File \"TTS/bin/train_tts.py\", line 22, in <module>\n",
+      "    from TTS.tts.datasets.preprocess import load_meta_data\n",
+      "ModuleNotFoundError: No module named 'TTS'\n"
      ]
     }
    ],
@@ -655,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -664,7 +665,7 @@
        "['phoneme_cleaners']"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -676,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1044,7 +1045,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1088,7 +1089,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1097,7 +1098,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1111,16 +1112,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'speaker_ids' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-16-28d2aec601d1>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mspeaker_ids\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'speaker_ids' is not defined"
+     ]
+    }
+   ],
    "source": [
     "speaker_ids"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1131,13 +1144,33 @@
     "\n",
     "if gst:\n",
     "    # B x gst_dim\n",
-    "    encoder_outputs, logits = model.compute_gst(x,\n",
+    "    inputs, encoder_outputs, logits = model.compute_gst(x,\n",
     "                                       style_mel,\n",
     "                                       speaker_embeddings if model.gst_use_speaker_embedding else None)\n",
-    "if num_speakers > 1:\n",
-    "    if not model.embeddings_per_sample:\n",
-    "        speaker_embeddings = model.speaker_embedding(speaker_ids)[:, None]\n",
-    "    encoder_outputs = model._concat_speaker_embedding(encoder_outputs, speaker_embeddings)"
+    "# if num_speakers > 1:\n",
+    "#     if not model.embeddings_per_sample:\n",
+    "#         speaker_embeddings = model.speaker_embedding(speaker_ids)[:, None]\n",
+    "#     encoder_outputs = model._concat_speaker_embedding(encoder_outputs, speaker_embeddings)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([1, 1, 512])"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "encoder_outputs.shape"
    ]
   },
   {
