Adding only RE option

--- a/cpqd_aux/test_phones/Distribuição de speaking rate.ipynb
+++ b/cpqd_aux/test_phones/Distribuição de speaking rate.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -98,13 +98,282 @@
        "4                            responder , responder .       1         9.398  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>wav_path</th>\n",
+       "      <th>text</th>\n",
+       "      <th>emb_id</th>\n",
+       "      <th>style_target</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>33</th>\n",
+       "      <td>/l/disk1/awstebas/data/TTS/vozes_sync/Rosana/9...</td>\n",
+       "      <td>4 para exemplo 5 para resgate 6 para localidad...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>15.532</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>196</th>\n",
+       "      <td>/l/disk1/awstebas/data/TTS/vozes_sync/Rosana/9...</td>\n",
+       "      <td>devido aos problemas com o banco do sistema me...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>15.518</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>276</th>\n",
+       "      <td>/l/disk1/awstebas/data/TTS/vozes_sync/Rosana/9...</td>\n",
+       "      <td>chaminés serão nos próximos anos cada vez mais...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>15.368</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>791</th>\n",
+       "      <td>/l/disk1/awstebas/data/TTS/vozes_sync/Rosana/9...</td>\n",
+       "      <td>ela fez várias denúncias contra seu chefe por ...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>16.423</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>955</th>\n",
+       "      <td>/l/disk1/awstebas/data/TTS/vozes_sync/Rosana/9...</td>\n",
+       "      <td>por causa de uma falha nos instrumentos o aviã...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>16.010</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15366</th>\n",
+       "      <td>/l/disk1/awstebas/data/TTS/vozes_sync/Rosana/9...</td>\n",
+       "      <td>65 reais e 43 centavos ?</td>\n",
+       "      <td>1</td>\n",
+       "      <td>15.680</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15386</th>\n",
+       "      <td>/l/disk1/awstebas/data/TTS/vozes_sync/Rosana/9...</td>\n",
+       "      <td>é bom deixar sempre claro o que é preciso faze...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>16.502</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15408</th>\n",
+       "      <td>/l/disk1/awstebas/data/TTS/vozes_sync/Rosana/9...</td>\n",
+       "      <td>rua professor joaquim de oliveira catarina 220...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>15.921</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15808</th>\n",
+       "      <td>/l/disk1/awstebas/data/TTS/vozes_sync/Rosana/9...</td>\n",
+       "      <td>no valor de: 452 reais e 30 centavos ?</td>\n",
+       "      <td>1</td>\n",
+       "      <td>17.016</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15933</th>\n",
+       "      <td>/l/disk1/awstebas/data/TTS/vozes_sync/Rosana/9...</td>\n",
+       "      <td>as melhores sugestões serão encaminhadas para ...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>15.513</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>74 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                wav_path  \\\n",
+       "33     /l/disk1/awstebas/data/TTS/vozes_sync/Rosana/9...   \n",
+       "196    /l/disk1/awstebas/data/TTS/vozes_sync/Rosana/9...   \n",
+       "276    /l/disk1/awstebas/data/TTS/vozes_sync/Rosana/9...   \n",
+       "791    /l/disk1/awstebas/data/TTS/vozes_sync/Rosana/9...   \n",
+       "955    /l/disk1/awstebas/data/TTS/vozes_sync/Rosana/9...   \n",
+       "...                                                  ...   \n",
+       "15366  /l/disk1/awstebas/data/TTS/vozes_sync/Rosana/9...   \n",
+       "15386  /l/disk1/awstebas/data/TTS/vozes_sync/Rosana/9...   \n",
+       "15408  /l/disk1/awstebas/data/TTS/vozes_sync/Rosana/9...   \n",
+       "15808  /l/disk1/awstebas/data/TTS/vozes_sync/Rosana/9...   \n",
+       "15933  /l/disk1/awstebas/data/TTS/vozes_sync/Rosana/9...   \n",
+       "\n",
+       "                                                    text  emb_id  style_target  \n",
+       "33     4 para exemplo 5 para resgate 6 para localidad...       1        15.532  \n",
+       "196    devido aos problemas com o banco do sistema me...       1        15.518  \n",
+       "276    chaminés serão nos próximos anos cada vez mais...       1        15.368  \n",
+       "791    ela fez várias denúncias contra seu chefe por ...       1        16.423  \n",
+       "955    por causa de uma falha nos instrumentos o aviã...       1        16.010  \n",
+       "...                                                  ...     ...           ...  \n",
+       "15366                           65 reais e 43 centavos ?       1        15.680  \n",
+       "15386  é bom deixar sempre claro o que é preciso faze...       1        16.502  \n",
+       "15408  rua professor joaquim de oliveira catarina 220...       1        15.921  \n",
+       "15808             no valor de: 452 reais e 30 centavos ?       1        17.016  \n",
+       "15933  as melhores sugestões serão encaminhadas para ...       1        15.513  \n",
+       "\n",
+       "[74 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[df['style_target']>15]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>wav_path</th>\n",
+       "      <th>text</th>\n",
+       "      <th>emb_id</th>\n",
+       "      <th>style_target</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2411</th>\n",
+       "      <td>/l/disk1/awstebas/data/TTS/vozes_sync/Rosana/9...</td>\n",
+       "      <td>atenção .</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3.505</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2541</th>\n",
+       "      <td>/l/disk1/awstebas/data/TTS/vozes_sync/Rosana/9...</td>\n",
+       "      <td>é !</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3.799</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3131</th>\n",
+       "      <td>/l/disk1/awstebas/data/TTS/vozes_sync/Rosana/9...</td>\n",
+       "      <td>bem , ontem , se , aqui , com .</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3.890</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11507</th>\n",
+       "      <td>/l/disk1/awstebas/data/TTS/vozes_sync/Rosana/9...</td>\n",
+       "      <td>em:</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3.371</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13220</th>\n",
+       "      <td>/l/disk1/awstebas/data/TTS/vozes_sync/Rosana/9...</td>\n",
+       "      <td>ó !</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3.950</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14999</th>\n",
+       "      <td>/l/disk1/awstebas/data/TTS/vozes_sync/Rosana/9...</td>\n",
+       "      <td>c , d , ê .</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3.922</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15308</th>\n",
+       "      <td>/l/disk1/awstebas/data/TTS/vozes_sync/Rosana/9...</td>\n",
+       "      <td>uau !</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3.947</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                wav_path  \\\n",
+       "2411   /l/disk1/awstebas/data/TTS/vozes_sync/Rosana/9...   \n",
+       "2541   /l/disk1/awstebas/data/TTS/vozes_sync/Rosana/9...   \n",
+       "3131   /l/disk1/awstebas/data/TTS/vozes_sync/Rosana/9...   \n",
+       "11507  /l/disk1/awstebas/data/TTS/vozes_sync/Rosana/9...   \n",
+       "13220  /l/disk1/awstebas/data/TTS/vozes_sync/Rosana/9...   \n",
+       "14999  /l/disk1/awstebas/data/TTS/vozes_sync/Rosana/9...   \n",
+       "15308  /l/disk1/awstebas/data/TTS/vozes_sync/Rosana/9...   \n",
+       "\n",
+       "                                  text  emb_id  style_target  \n",
+       "2411                         atenção .       1         3.505  \n",
+       "2541                               é !       1         3.799  \n",
+       "3131   bem , ontem , se , aqui , com .       1         3.890  \n",
+       "11507                              em:       1         3.371  \n",
+       "13220                              ó !       1         3.950  \n",
+       "14999                      c , d , ê .       1         3.922  \n",
+       "15308                            uau !       1         3.947  "
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[df['style_target']<4]"
    ]
   },
   {
